dominio: cure, slot incantesimo e ordine stabile dei segnaposti
Aggiunge i valori che descrivono una cura (HealingDefinition, HealingTarget,
HealingSlotScaling) e l'identificatore tipizzato degli slot incantesimo, standard
o del Patto. AbilityDefinition puo' quindi dichiarare una cura accanto al danno.

Chi e' morto per sfinimento smette di comparire fra i combattenti di turno, e i
segnaposti della mappa hanno un ordine canonico per id: un'area consuma i tiri
deterministici in quell'ordine, che deve restare identico dopo salvataggio e
riapertura in un'altra JVM.